[+] #331 #330 Ajout d'une image d'accroche sur une catégorie (Philippe-M)
[+] #348 Ajout d'un paramètre "extra" à la fonction plxUtils->printArea (bazooka07)
[+] #349 Lors de l'installation, possibilité de créer ou non les données d'exemples (sudwebdesign)
FIX Correction de la gestion des ID CSS dans les menus (sudwebdesign)
FIX Autorisation du cross-origin dans les flux RSS/ATOM (sudwebdesign)
FIX #287 Capcha : ajout d'un espace insécable avant le "?" (P3ter)
FIX #302 Renvoie vers index.php si un paramètre est inconnu dans l'URI (bazooka07)
FIX #315 Les espaces dans la recherche de medias font disparaitre les résultats (P3ter)
FIX #318 L_NEW_CATEGORY en doublon pour certaines langues (P3ter)
FIX #322 plxDate::getCalendar() ne retourne jamais L_SUNDAY (jerrywham, P3ter)
FIX #323 La fonction plxUtils::printSelect ne fonctione pas avec un "selected" de type numérique (Philippe-M)
FIX #324 Correction couleur des selecteurs si le theme du navigateur est inversé (sudwebdesign)
FIX #326 Remplacement de "create_function()" déprécié depuis PHP 5.3 (faille et dégradation des performances) (P3ter)
FIX #329 Mauvais affichage du nom du site et du menu avec Safari (P3ter)
FIX #332 Traductions manquantes en Polonais (sudwebdesign)
FIX #334 Thème par défaut : affichage cassé des sous-menu de pages statiques (sudwebdesign)
FIX #343 Article n'est plus affiché après suppression de la catégorie (P3ter)
FIX #345 $plxShow->catList affiche la catégorie 10 à tort (bazooka07)
FIX #349 Suppression de l'utilisation de la fonction "get_magic_quotes_gpc()" dépréciée en PHP 7.4 (sudwebdesign)

## PLUXML 5.7 (sortie : 11/12/2018) ##

[+] PluCSS 1.3
[+] Nouveau thème par défaut
[+] Prise en compte du fichier CSS des plugins sur la page auth.php
[+] Administration : Tri ordre des catégories et des pages statiques par drag&drop
[+] Affichage de l'image d'accroche dans les flux RSS
[+] Gestionnaire de médias : affichage du nombre maximal de fichiers par envoi